# taskmaster-rs

./: .gitignore  Cargo.toml  bacon.toml  test.ics
src/: app.rs  lib.rs  main.rs  parser.rs  task.rs  task_views.rs  tasks.rs  ui_elements.rs
src/task_views/: mod.rs
src/ui_elements/: mod.rs  task_edit.rs  task_modal.rs
