[package]
name = "taskmaster-rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.*"
convert_case = "0.6.0"
eframe = { version = "0.22.*" }
egui_extras = { version = "0.22.*", features = ["datepicker"] }
hex-rgb = "0.1.1"
ical = { version = "0.8.0", features = ["generator"] }

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
