[package]
name = "taskmaster-rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"
colorsys = "0"
convert_case = "0"
eframe = "0"
egui_file = "0"
egui_extras = { version = "0", features = ["datepicker"] }
ical = "0"
uuid = { version = "1", features = [ "v4", "fast-rng" ] }
wildmatch = "2"
